updated sparrow bat script